# lasur-mobility-toolkit

./: .gitignore  Makefile  README.md  index_en.ts  index_fr.ts  pyproject.toml
.github/workflows/: python-package.yml
.virtual_documents/typo_modal/: Untitled.ipynb  fix_reco_pro.ipynb
data/: dest_desserte.dbf  dest_desserte.shp  dest_desserte.shx  orig_desserte.dbf  orig_desserte.shp  orig_desserte.shx
geo/: geo.md  grid_ch_5_10_45_49.dbf  grid_ch_5_10_45_49.shp  grid_ch_5_10_45_49.shx  grid_eu-625_1875_37_57.dbf  grid_eu-625_1875_37_57.shp  grid_eu-625_1875_37_57.shx  grid_wrld-125_175-53_67.dbf  grid_wrld-125_175-53_67.shp  grid_wrld-125_175-53_67.shx
tests/: test_compute.py  test_geo.py  test_mesu_empl.py  test_reco_dt.py  test_reco_multi.py  test_reco_pro.py
tests/data/: empl_input.json  input_frontend.json  input_params.json  test_pts.parquet  user_input.json
typo_modal/: dict_mesu.py  service.py
typo_modal/data/: dest_desserte.parquet  h3_can_train_pub.csv  h3_can_train_pub.parquet  orig_desserte.parquet
