[tool.poetry]
name = "typo-modal"
version = "0.1.1"
description = ""
authors = ["Clément Rames <clement.rames@epfl.ch>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
geopandas = "^1.0.1"
pyarrow = "^19.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
